# flexischools-order-processing

./: CICD Strategy.md  Dockerfile  Observability and Security.md  README.md  app.py  cdk.context.json  pyproject.toml  requirements.txt
cdk.out/: AwsSolutions-FlexischoolsStack-NagReport.csv  FlexischoolsStack.assets.json  FlexischoolsStack.template.json  manifest.json  tree.json
cmd/: OrderProcessing.py  RDSManager.py  SQSQueueManager.py  SecretsManager.py
flexischools/: flexischools_stack.py
tests/unit/: test_flexischools_stack.py
